Add user registration, login, logout

--- a/culinary_cloud_ai/config/static/styles/main.css
+++ b/culinary_cloud_ai/config/static/styles/main.css
@@ -20,10 +20,10 @@ nav a {
 
 main {
     padding: 2rem;
+    
 }
 
-
-
+/* footer */
 footer {
     background-color: #eee;
     text-align: center;
