Add display user profile, update user profile /feature

--- a/culinary_cloud_ai/applications/recipe_user/templates/recipe_user/recipeuser_login.html
+++ b/culinary_cloud_ai/applications/recipe_user/templates/recipe_user/recipeuser_login.html
@@ -22,5 +22,10 @@
             <button type="submit">login</button>
         </form>
     </div>
+    <br>
+    <div class="signup-cta">
+        Don't have an account? <a href="{% url 'register' %}">Sign up</a>
+    </div>
 
+    <!-- <h3> Dont have an account? <a href="{% url 'register' %}">Sign-up</a></h3> -->
 {% endblock %}
