--- a/culinary_cloud_ai/applications/recipes/templates/recipes/base.html
+++ b/culinary_cloud_ai/applications/recipes/templates/recipes/base.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>{% block title %}AI Recipe Sharing{% endblock %}</title>
+  <title>{% block title %}Culinary Cloud AI{% endblock %}</title>
   <link rel="stylesheet" href="{% static 'css/main.css' %}">
 </head>
 <body>
