--- a/culinary_cloud_ai/applications/recipes/templates/recipes/generate_combined.html
+++ b/culinary_cloud_ai/applications/recipes/templates/recipes/generate_combined.html
@@ -1,4 +1,4 @@
-{% extends "recipes/base.html" %}
+{% extends "base.html" %}
 {% load static %}
 
 {% block title %}AI Chef — Generate a Recipe{% endblock %}
