--- a/culinary_cloud_ai/config/templates/base.html
+++ b/culinary_cloud_ai/config/templates/base.html
@@ -12,9 +12,11 @@
     <div class="site-nav">
       <a href="{% url 'recipes:home' %}">Home</a>
       <a href="{% url 'recipes:generate_combined' %}">Try to generate</a>
+      <a href="{% url 'recipes:recipe-list' %}">Recipes</a>
       {% if user.is_authenticated %}
         <a href="{% url 'logout' %}">Logout</a>
         <a href="{% url 'profile' %}">Profile</a>
+        <a href="{% url 'my-recipes' %}">My Recipes</a>
       {% else %}
         <a href="{% url 'login' %}">Login</a>
         <a href="{% url 'register' %}">Register</a>
