--- a/culinary_cloud_ai/applications/recipes/templates/recipes/recipe_detail.html
+++ b/culinary_cloud_ai/applications/recipes/templates/recipes/recipe_detail.html
@@ -51,7 +51,7 @@
           <p><strong>Time:</strong> {{ recipe.cooking_time }}</p>
         {% endif %}
 
-        <p><strong>Likes:</strong>    {{ recipe.likes_count }}</p>
+        <!-- <p><strong>Likes:</strong>    {{ recipe.likes_count }}</p>
         {% if user.is_authenticated %}
         <form action="{% url 'recipes:toggle_like' recipe.id %}" method="post" style="display:inline;">
           {% csrf_token %}
@@ -63,7 +63,7 @@
         </form>
         {% else %}
           <p><a href="{% url 'login' %}?next={{ request.path }}">Login</a> to like this recipe.</p>
-        {% endif %}
+        {% endif %} -->
         
         <p><strong>Comments:</strong> {{ recipe.comments_count }}</p>
         <p><strong>By:</strong>       {{ recipe.recipe_owner.username }}</p>
