--- a/culinary_cloud_ai/config/static/styles/main.css
+++ b/culinary_cloud_ai/config/static/styles/main.css
@@ -28,7 +28,7 @@ footer {
     background-color: #eee;
     text-align: center;
     padding: 1rem;
-    position: fixed;
+    /*position: fixed;*/
     bottom: 0;
     width: 100%;
 }
