--- a/culinary_cloud_ai/config/templates/base.html
+++ b/culinary_cloud_ai/config/templates/base.html
@@ -4,12 +4,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <title>{% block title %}Culinary Cloud AI{% endblock %}</title>
   <link rel="stylesheet" href="{% static 'css/main.css' %}">
 </head>
 <body>
   <header>
-    <div class="site-nav">
+    <nav class="site-nav">
+      {# Brand / project name #}
+      <a href="{% url 'recipes:home' %}" class="site-title">Culinary Cloud AI</a>
+
+      {# Main links #}
       <a href="{% url 'recipes:home' %}">Home</a>
       <a href="{% url 'recipes:generate_combined' %}">Try to generate</a>
       <a href="{% url 'recipes:recipe-list' %}">Recipes</a>
@@ -21,11 +26,13 @@
         <a href="{% url 'login' %}">Login</a>
         <a href="{% url 'register' %}">Register</a>
       {% endif %}
-    </div>
+    </nav>
   </header>
 
   <main>
     {% block content %}{% endblock %}
   </main>
+
+  {% block extra_js %}{% endblock %}
 </body>
 </html>
