--- a/culinary_cloud_ai/applications/recipes/templates/recipes/generate_combined.html
+++ b/culinary_cloud_ai/applications/recipes/templates/recipes/generate_combined.html
@@ -113,24 +113,33 @@
       <!-- Additional Details Section -->
       <fieldset class="form-section">
         <legend>Additional Details</legend>
+
+        <!-- First row: three dropdowns -->
         <div class="form-row">
+          <!-- Cuisine dropdown -->
           <div class="form-group">
-            {{ form.manual_ingredients.label_tag }}
-            {{ form.manual_ingredients }}
+            {{ form.cuisine.label_tag }}
+            {{ form.cuisine }}
           </div>
+
+          <!-- Cooking Time dropdown -->
+          <div class="form-group">
+            {{ form.cooking_time.label_tag }}
+            {{ form.cooking_time }}
+          </div>
+
+          <!-- Difficulty dropdown -->
           <div class="form-group">
             {{ form.difficulty.label_tag }}
             {{ form.difficulty }}
           </div>
         </div>
+
+        <!-- Second row: full‐width textarea for manual ingredients -->
         <div class="form-row">
-          <div class="form-group">
-            {{ form.cuisine.label_tag }}
-            {{ form.cuisine }}
-          </div>
-          <div class="form-group">
-            {{ form.cooking_time.label_tag }}
-            {{ form.cooking_time }}
+          <div class="form-group" style="grid-column: 1 / -1;">
+            {{ form.manual_ingredients.label_tag }}
+            {{ form.manual_ingredients }}
           </div>
         </div>
       </fieldset>
@@ -140,8 +149,6 @@
         <a href="{% url 'recipes:home' %}" class="btn btn-secondary">Back to Main Page</a>
         <button type="submit" class="btn btn-primary">Generate Recipe</button>
       </div>
-    </form>
-  </div>
 {% endblock %}
 
 {% block extra_js %}
