--- a/culinary_cloud_ai/applications/recipes/templates/recipes/recipe_detail.html
+++ b/culinary_cloud_ai/applications/recipes/templates/recipes/recipe_detail.html
@@ -81,6 +81,29 @@
                     <div class="comment-meta">
                     &nbsp;&nbsp;&nbsp;-- <small><em>By {{ comment.author.username }}</em></small>
                     <small>({{ comment.created_at|date:"M d, Y H:i" }})</small>
+
+                    <!-- Delete comment -->
+                    {% if user.is_authenticated %}
+                        {% if comment.author == user or recipe.recipe_owner == user %}
+                            {% if comment_to_delete and comment_to_delete.pk == comment.pk %}
+                            <!-- Show confirmation only for the comment targeted for delete -->
+                                <div class="delete-confirmation" style="margin-top: 10px;">
+                                    <p style="color: red; font-style: italic;">Are you sure you want to delete this comment?</p>
+                                    <form method="post">
+                                        {% csrf_token %}
+                                        <button type="submit">Confirm Delete</button>
+                                        <a href="{{ comment_to_delete.recipe.get_absolute_url }}">Cancel</a>
+                                    </form>
+                                </div>
+                            {% else %}
+                                <!-- Else Show only delete button that leads to confirmation view -->
+                                <form method="get" action="{% url 'recipes:comment-delete' comment.pk %}" style="display:inline;">
+                                    <button type="submit">Delete</button>
+                                </form>
+                            {% endif %}
+                        {% endif %}
+                    {% endif %}
+                    
                 </div>
             </div>
         {% empty %}
