--- a/culinary_cloud_ai/applications/recipe_user/templates/recipe_user/recipeuser_register.html
+++ b/culinary_cloud_ai/applications/recipe_user/templates/recipe_user/recipeuser_register.html
@@ -4,16 +4,21 @@
 
     {% if messages %}
     {% for message in messages %}
-        <div class="alert {% if message.tags %}alert-{{ message.tags }}{% endif %}">
+        <div class="alert {% if message.tags %}alert-{{ message.tags }}{% endif %}"
+        style="text-align: center; color: red; font-weight: bold; margin: 20px 0;"
+        >
             {{ message }}
         </div>
     {% endfor %}
     {% endif %}
+    
+    <div class="registration-container">
+        <div class="registration-box">
 
-    <h2>Register</h2>
-    <form method="POST" enctype="multipart/form-data">
-        {% csrf_token %}
-        {{ form.as_p }}
-    <button type="submit">Register</button>
-    </form>
+        <h2>Register</h2>
+        <form method="POST" enctype="multipart/form-data" class="registration-form">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <button type="submit">Register</button>
+        </form>
 {% endblock %}
