--- a/culinary_cloud_ai/applications/recipe_user/templates/recipe_user/recipe_container.html
+++ b/culinary_cloud_ai/applications/recipe_user/templates/recipe_user/recipe_container.html
@@ -10,7 +10,7 @@
     <h2>{{ recipe.title }}</h2>
     <p>{{ recipe.short_description }}</p>
     <div class="stats">
-        <span>Likes: {{ recipe.likes_count }}</span>
+        <span>Likes: {{ recipe.like_count }}</span>
         <span>Comments: {{ recipe.comments_count }}</span>
     </div>
 </a>
