--- a/culinary_cloud_ai/applications/recipes/templates/recipes/recipe_container.html
+++ b/culinary_cloud_ai/applications/recipes/templates/recipes/recipe_container.html
@@ -2,15 +2,26 @@
 {% load static %}
 
 <a href="{{ recipe.get_absolute_url }}" class="recipe-card">
-  {% if recipe.recipe_image %}
-    <img src="{{ recipe.recipe_image.url }}" alt="{{ recipe.title }}">
-  {% else %}
-    <img src="{% static 'images/placeholder.png' %}" alt="No image">
-  {% endif %}
-  <h2>{{ recipe.title }}</h2>
-  <p>{{ recipe.short_description }}</p>
-  <div class="stats">
-    <span>Likes: {{ recipe.likes_count }}</span>
-    <span>Comments: {{ recipe.comments_count }}</span>
+  <!-- front of card: image, title, stats -->
+  <div class="card-front">
+    {% if recipe.recipe_image %}
+      <img src="{{ recipe.recipe_image.url }}" alt="{{ recipe.title }}">
+    {% else %}
+      <img src="{% static 'images/placeholder.png' %}" alt="No image">
+    {% endif %}
+    <h2>{{ recipe.title }}</h2>
+    <div class="stats">
+      <span>Likes: {{ recipe.likes_count }}</span>
+      <span>Comments: {{ recipe.comments_count }}</span>
+    </div>
+  </div>
+
+  <!-- back of card: description, initially hidden -->
+  <div class="recipe-card__overlay">
+    <p class="card__title">{{ recipe.title }}</p>
+    <p class="card__description">
+      {{ recipe.description }}
+    </p>
   </div>
 </a>
+
